--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@import '@fullcalendar/core/main.css';
+@import '@fullcalendar/daygrid/main.css';
+@import '@fullcalendar/timegrid/main.css';
+
 [x-cloak] {
     display: none;
 }
